--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -58,15 +58,15 @@
     "@sentry/tracing": "^7.54.0",
     "@sentry/vite-plugin": "^0.4.0",
     "@sentry/vue": "^7.54.0",
-    "@storybook/addon-a11y": "^6.4.19",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-docs": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
+    "@storybook/addon-a11y": "6.4.19",
+    "@storybook/addon-actions": "6.4.19",
+    "@storybook/addon-docs": "6.4.19",
+    "@storybook/addon-essentials": "6.4.19",
+    "@storybook/addon-links": "6.4.19",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack5": "^6.4.19",
-    "@storybook/manager-webpack5": "^6.4.19",
-    "@storybook/vue3": "^6.4.19",
+    "@storybook/builder-webpack5": "6.4.19",
+    "@storybook/manager-webpack5": "6.4.19",
+    "@storybook/vue3": "6.4.19",
     "@tailwindcss/forms": "0.5.0",
     "@testing-library/user-event": "14.2.1",
     "@testing-library/vue": "6.6.0",
@@ -88,7 +88,6 @@
     "eslint-plugin-storybook": "^0.5.7",
     "eslint-plugin-vue": "^8.2.0",
     "ethers": "5.7.0",
-    "husky": "^7.0.0",
     "jsdom": "19.0.0",
     "playwright": "1.27.0",
     "postcss": "^8.4.12",
