--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
-    "test:unit": "TZ=UTC-3 vitest --environment jsdom",
+    "test": "TZ=UTC-3 vitest --environment jsdom",
     "test:unit:ci": "TZ=UTC-3 vitest --environment jsdom --run",
     "test:e2e": "cucumber-js -t \"not @testnet\"",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
@@ -36,8 +36,6 @@
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
     "@cucumber/cucumber": "^8.4.0",
     "@cucumber/html-formatter": "^19.2.0",
     "@cucumber/messages": "^19.1.2",
@@ -84,7 +82,6 @@
     "autoprefixer": "10.4.4",
     "babel-loader": "8.2.3",
     "c8": "7.11.2",
-    "eslint": "^8.34.0",
     "eslint-plugin-storybook": "^0.5.7",
     "eslint-plugin-vue": "^8.2.0",
     "ethers": "5.7.0",
