--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "packages/*"
   ],
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "lerna run lint",
+    "test": "lerna run test"
   },
   "dependencies": {
   },
@@ -13,6 +15,9 @@
     "lerna": "^7.2.0",
     "typescript": "4.7.4",
     "prettier": "2.8.4",
-    "husky": "8.0.1"
+    "eslint": "8.48.0",
+    "husky": "8.0.1",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0"
   }
 }
