fix: move common prettier config

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.48.0",
     "husky": "8.0.1",
     "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0"
+    "@commitlint/config-conventional": "^17.1.0",
+    "@matterlabs/prettier-config": "^1.0.2"
   }
 }
