fix: docker images

--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -1,12 +1,16 @@
-FROM node:18.9.0-alpine AS base-stage
+FROM node:18.10.0-alpine AS base-stage
 ENV NODE_ENV=production
 
 WORKDIR /usr/src/app
 
+RUN apk add --update python3 make g++ && rm -rf /var/cache/apk/*
+
 COPY --chown=node:node .npmrc .npmrc
+COPY --chown=node:node lerna.json ./
 COPY --chown=node:node package*.json ./
+COPY --chown=node:node ./packages/api/package*.json ./packages/api/
 RUN npm ci --ignore-scripts --only=production && npm cache clean --force
-COPY --chown=node:node . .
+COPY --chown=node:node ./packages/api/. ./packages/api
 RUN rm -f .npmrc
 
 FROM base-stage AS development-stage
@@ -20,7 +24,7 @@ RUN npm run build
 
 FROM base-stage AS production-stage
 
-COPY --chown=node:node --from=build-stage /usr/src/app/dist ./dist
+COPY --chown=node:node --from=build-stage /usr/src/app/packages/api/dist ./dist
 
 ARG NODE_ENV=production
 ENV NODE_ENV $NODE_ENV
