--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "lerna run lint",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "build": "lerna run build"
   },
   "dependencies": {
   },
