--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -6,7 +6,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "test": "TZ=UTC-3 vitest --environment jsdom",
-    "test:unit:ci": "TZ=UTC-3 vitest --environment jsdom --run",
+    "test:unit:ci": "TZ=UTC-3 vitest --environment jsdom --run --reporter=verbose --reporter=junit --outputFile.junit=./junit.xml",
     "test:e2e": "cucumber-js -t \"not @testnet\"",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
