--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -46,14 +46,18 @@ jobs:
         run: |
           npm run test:unit:ci
 
+      - name: Type check
+        run: |
+          npm run typecheck --scope=app
+
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action/composite@v2
         if: always()
         with:
           files: |
-            /packages/app/junit.xml
-            /packages/api/junit.xml
-            /packages/worker/junit.xml
+            packages/app/junit.xml
+            packages/api/junit.xml
+            packages/worker/junit.xml
           check_run_annotations: all tests, skipped tests
           report_individual_runs: "true"
 
