--- a/.github/workflows/api-e2e-tests.yml
+++ b/.github/workflows/api-e2e-tests.yml
@@ -44,7 +44,7 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action/composite@v2
         if: always()
         with:
-          files: "e2e-junit.xml"
+          files: "packages/api/e2e-junit.xml"
           check_run_annotations: all tests, skipped tests
           report_individual_runs: "true"
           check_name: API E2E Test Results
