fix: app feature deployment

--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -23,6 +23,7 @@ jobs:
           cache: 'npm'
 
       - name: Install
+        working-directory: ./packages/app
         run: |
           npm pkg delete scripts.prepare
           npm ci
