--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -28,15 +28,15 @@ jobs:
           npm pkg delete scripts.prepare
           npm ci
 
-      - name: Lint
-        run: |
-          npm run lint -- --no-fix --max-warnings 0
+      # - name: Lint
+      #   run: |
+      #     npm run lint -- --no-fix --max-warnings 0
 
-      - name: Test
-        run: npm run test:unit:ci
+      # - name: Test
+      #   run: npm run test:unit:ci
 
-      - name: Type check
-        run: npm run typecheck
+      # - name: Type check
+      #   run: npm run typecheck
 
       - name: Build
         run: |
@@ -58,6 +58,7 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_STAGING_SCAN_V2 }}"
           expires: 7d
           projectId: staging-scan-v2
+          entryPoint: ./packages/app
 
   # mainnet:
   #   needs: build
