--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -19,23 +19,28 @@
     "*.{vue,js,ts}": "npm run lint"
   },
   "dependencies": {
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/keccak256": "^5.7.0",
     "@matterlabs/composables": "1.1.7",
     "@matterlabs/token-library": "2.9.0",
     "@vueuse/components": "8.9.2",
     "@vueuse/core": "8.9.2",
     "date-fns": "2.28.0",
     "ohmyfetch": "0.4.21",
+    "prismjs": "1.27.0",
     "sass-loader": "12.6.0",
+    "tippy.js": "^6.3.7",
     "vue": "3.2.42",
     "vue-i18n": "9.2.0-beta.35",
     "vue-prism-editor": "2.0.0-alpha.2",
     "vue-router": "4.0.14",
     "vue-tippy": "6.0.0",
-    "zksync-web3": "0.13.1",
-    "prismjs": "1.27.0"
+    "zksync-web3": "0.13.1"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@cucumber/cucumber": "^8.4.0",
     "@cucumber/html-formatter": "^19.2.0",
     "@cucumber/messages": "^19.1.2",
@@ -43,14 +48,9 @@
     "@headlessui/vue": "1.5.0",
     "@heroicons/vue": "1.0.6",
     "@matterlabs/eslint-config-vue": "^1.1.4",
+    "@matterlabs/prettier-config": "^1.0.2",
     "@playwright/test": "1.27.0",
     "@rushstack/eslint-patch": "^1.1.0",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^9.0.0",
-    "@semantic-release/release-notes-generator": "^10.0.3",
     "@sentry/cli": "^2.18.1",
     "@sentry/tracing": "^7.54.0",
     "@sentry/vite-plugin": "^0.4.0",
@@ -81,17 +81,20 @@
     "autoprefixer": "10.4.4",
     "babel-loader": "8.2.3",
     "c8": "7.11.2",
+    "eslint": "8.48.0",
     "eslint-plugin-storybook": "^0.5.7",
     "eslint-plugin-vue": "^8.2.0",
     "ethers": "5.7.0",
     "jsdom": "19.0.0",
     "playwright": "1.27.0",
     "postcss": "^8.4.12",
+    "prettier": "2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "sass": "^1.49.9",
     "start-server-and-test": "^1.14.0",
     "storybook-vue3-router": "^2.2.1",
     "tailwindcss": "^3.0.23",
+    "typescript": "4.7.4",
     "vite": "2.9.14",
     "vitest": "0.15.2",
     "vue-loader": "16.8.3",
