--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@matterlabs/prettier-config": "^1.0.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^9.0.0",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "@types/node": "18.17.18",
     "eslint": "8.48.0",
     "husky": "8.0.1",
     "lerna": "^7.2.0",
