--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -28,23 +28,23 @@ jobs:
           npm pkg delete scripts.prepare
           npm ci
 
-      # - name: Lint
-      #   run: |
-      #     npm run lint -- --no-fix --max-warnings 0
+      - name: Lint
+        run: |
+          npm run lint -- --no-fix --max-warnings 0
 
-      # - name: Test
-      #   run: npm run test:unit:ci
+      - name: Test
+        run: npm run test:unit:ci
 
-      # - name: Type check
-      #   run: npm run typecheck
+      - name: Type check
+        run: npm run typecheck
 
       - name: Build
         run: |
           VITE_VERSION=${{ github.head_ref }} \
             npm run build
 
-      # - name: Build Storybook
-      #   run: npm run build-storybook
+      - name: Build Storybook
+        run: npm run build-storybook
 
       - name: Update config
         run: |
