--- a/.github/workflows/app-deploy-prod.yml
+++ b/.github/workflows/app-deploy-prod.yml
@@ -21,13 +21,13 @@ jobs:
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           version: "tags/${{ github.event.inputs.version }}"
-          file: "app-dist.zip"
-          target: "app-dist.zip"
+          file: "dist.zip"
+          target: "dist.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Unzip Dist package
         run: |
-          unzip app-dist.zip
+          unzip dist.zip
 
       - name: Download Storybook package
         uses: dsaltares/fetch-gh-release-asset@master
