fix: firebase public folder name

--- a/packages/app/firebase.json
+++ b/packages/app/firebase.json
@@ -2,7 +2,7 @@
   "hosting": [
     {
       "target": "web",
-      "public": "app-dist",
+      "public": "dist",
       "ignore": ["firebase.json", "**/.*", "**/node_modules/**", "**/*.map"],
       "rewrites": [
         {
