--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,14 +25,14 @@
     "@vueuse/core": "8.9.2",
     "date-fns": "2.28.0",
     "ohmyfetch": "0.4.21",
+    "prismjs": "1.27.0",
     "sass-loader": "12.6.0",
     "vue": "3.2.42",
     "vue-i18n": "9.2.0-beta.35",
     "vue-prism-editor": "2.0.0-alpha.2",
     "vue-router": "4.0.14",
     "vue-tippy": "6.0.0",
-    "zksync-web3": "0.13.1",
-    "prismjs": "1.27.0"
+    "zksync-web3": "0.13.1"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
@@ -45,12 +45,6 @@
     "@matterlabs/eslint-config-vue": "^1.1.4",
     "@playwright/test": "1.27.0",
     "@rushstack/eslint-patch": "^1.1.0",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/github": "^8.0.2",
-    "@semantic-release/npm": "^9.0.0",
-    "@semantic-release/release-notes-generator": "^10.0.3",
     "@sentry/cli": "^2.18.1",
     "@sentry/tracing": "^7.54.0",
     "@sentry/vite-plugin": "^0.4.0",
