--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Create Release
 
 on:
   push:
@@ -36,17 +36,26 @@ jobs:
         run: |
           npm run test:unit:ci
 
+      - name: App type check
+        working-directory: ./packages/app
+        run: |
+          npm run typecheck
+
       - name: Create Release Version
         id: release
         env:
           GITHUB_TOKEN: ${{ github.token }}
-        run: npx semantic-release
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+        run: |
+            VITE_SENTRY_DSN=https://ce75ed993f964591901fbe0b7868aa50@o1242386.ingest.sentry.io/4504802315468800 \
+            VITE_APP_ENVIRONMENT=production \
+              npx semantic-release
 
-  createReleaseDockerImages:
-    name: Create Release Docker Images
+  deployBackendToStaging:
+    name: Deploy Block Explorer backend to staging
     runs-on: [self-hosted, default]
     needs: createReleaseVersion
-    if: ${{ needs.createReleaseVersion.outputs.releaseVersion != '' }}
+    if: ${{ github.ref == 'refs/heads/main' && needs.createReleaseVersion.outputs.releaseVersion != '' }}
     steps:
       - uses: actions/checkout@v3
 
@@ -83,3 +92,65 @@ jobs:
               "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-api:${{ steps.setVersionForFlux.outputs.imageTag }}"
           file: packages/api/Dockerfile
           no-cache: true
+
+      - name: Build and push Docker image for Worker
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: |
+              "matterlabs/block-explorer-worker:latest"
+              "matterlabs/block-explorer-worker:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+              "matterlabs/block-explorer-worker:${{ steps.setVersionForFlux.outputs.imageTag }}"
+              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-worker:latest"
+              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-worker:v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
+              "us-docker.pkg.dev/matterlabs-infra/matterlabs-docker/block-explorer-worker:${{ steps.setVersionForFlux.outputs.imageTag }}"
+          file: packages/worker/Dockerfile
+          no-cache: true
+
+  deployFrontendToStaging:
+    name: Deploy Block Explorer frontend to staging
+    runs-on: ubuntu-latest
+    needs: publish
+    if: ${{ github.ref == 'refs/heads/main' && needs.publish.outputs.releaseVersion != '' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Download Dist package
+        uses: dsaltares/fetch-gh-release-asset@master
+        with:
+          version: "tags/v${{ needs.publish.outputs.releaseVersion }}"
+          file: "dist.zip"
+          target: "dist.zip"
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Unzip Dist package
+        run: |
+          unzip dist.zip
+
+      - name: Update config
+        run: |
+          echo "window[\"##runtimeConfig\"] = { appEnvironment: \"staging\" };" > dist/config.js
+
+      - name: Download Storybook package
+        uses: dsaltares/fetch-gh-release-asset@master
+        with:
+          version: "tags/v${{ needs.publish.outputs.releaseVersion }}"
+          file: "storybook-static.zip"
+          target: "storybook-static.zip"
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Unzip Storybook package
+        run: |
+          unzip storybook-static.zip
+
+      - name: Deploy
+        uses: matter-labs/action-hosting-deploy@main
+        id: deploy
+        with:
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_STAGING_SCAN_V2 }}"
+          projectId: staging-scan-v2
+          channelID: live
