--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,8 +110,8 @@ jobs:
   deployFrontendToStaging:
     name: Deploy Block Explorer frontend to staging
     runs-on: ubuntu-latest
-    needs: publish
-    if: ${{ github.ref == 'refs/heads/main' && needs.publish.outputs.releaseVersion != '' }}
+    needs: createReleaseVersion
+    if: ${{ github.ref == 'refs/heads/main' && needs.createReleaseVersion.outputs.releaseVersion != '' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -121,7 +121,7 @@ jobs:
       - name: Download Dist package
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          version: "tags/v${{ needs.publish.outputs.releaseVersion }}"
+          version: "tags/v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
           file: "dist.zip"
           target: "dist.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -137,7 +137,7 @@ jobs:
       - name: Download Storybook package
         uses: dsaltares/fetch-gh-release-asset@master
         with:
-          version: "tags/v${{ needs.publish.outputs.releaseVersion }}"
+          version: "tags/v${{ needs.createReleaseVersion.outputs.releaseVersion }}"
           file: "storybook-static.zip"
           target: "storybook-static.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
