--- a/.github/workflows/app-deploy-preview.yml
+++ b/.github/workflows/app-deploy-preview.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Unzip Dist package
         run: |
-          unzip dist.zip
+          unzip dist.zip -d packages/app
 
       - name: Download Storybook package
         uses: dsaltares/fetch-gh-release-asset@master
@@ -41,7 +41,7 @@ jobs:
 
       - name: Unzip Storybook package
         run: |
-          unzip storybook-static.zip
+          unzip storybook-static.zip -d packages/app
 
       - name: Deploy
         id: deploy
@@ -52,6 +52,7 @@ jobs:
           expires: 7d
           projectId: scan-v2
           channelID: ${{ github.event.inputs.version }}
+          entryPoint: ./packages/app
 
       - name: Output version url on success
         run: |
