--- a/.github/workflows/app-deploy-prod.yml
+++ b/.github/workflows/app-deploy-prod.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Unzip Dist package
         run: |
-          unzip dist.zip
+          unzip dist.zip -d packages/app
 
       - name: Download Storybook package
         uses: dsaltares/fetch-gh-release-asset@master
@@ -39,7 +39,7 @@ jobs:
 
       - name: Unzip Storybook package
         run: |
-          unzip storybook-static.zip
+          unzip storybook-static.zip -d packages/app
 
       - name: Deploy
         id: deploy
@@ -49,3 +49,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SCAN_V2 }}'
           projectId: scan-v2
           channelID: live
+          entryPoint: ./packages/app
