--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,7 +132,7 @@ jobs:
 
       - name: Update config
         run: |
-          echo "window[\"##runtimeConfig\"] = { appEnvironment: \"staging\" };" > dist/config.js
+          echo "window[\"##runtimeConfig\"] = { appEnvironment: \"staging\" };" > packages/app/dist/config.js
 
       - name: Download Storybook package
         uses: dsaltares/fetch-gh-release-asset@master
