--- a/.github/workflows/app-deploy-prod.yml
+++ b/.github/workflows/app-deploy-prod.yml
@@ -29,6 +29,10 @@ jobs:
         run: |
           unzip dist.zip -d packages/app
 
+      - name: Update config
+        run: |
+          echo "window[\"##runtimeConfig\"] = { sentryDSN: \"${{ vars.SENTRY_DSN }}\"  };" > packages/app/dist/config.js
+
       - name: Download Storybook package
         uses: dsaltares/fetch-gh-release-asset@master
         with:
