--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Test
         run: |
-          npm run test:unit:ci
+          npm run test:ci
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action/composite@v2
