--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -33,7 +33,7 @@ jobs:
           npm run lint -- --no-fix --max-warnings 0
 
       - name: Test
-        run: npm run test:unit:ci
+        run: npm run test:ci
 
       - name: Type check
         run: npm run typecheck
