--- a/packages/api/docker-compose.yaml
+++ b/packages/api/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       target: development-stage
-    command: npm run start:debug
+    command: npm run dev:debug
     environment:
       - PORT=3000
       - METRICS_PORT=3005
