--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,22 @@
 name: block-explorer
 services:
+  app:
+    build:
+      context: .
+      dockerfile: ./packages/app/Dockerfile
+    command: npm run --prefix packages/app dev -- --host
+    ports:
+      - '3010:3010'
+    depends_on:
+      - api
+    restart: unless-stopped
+
   worker:
     build:
       context: .
+      dockerfile: ./packages/worker/Dockerfile
       target: development-stage
-    command: npm run dev:debug
+    command: npm run --prefix packages/worker dev:debug
     environment:
       - PORT=3001
       - LOG_LEVEL=verbose
@@ -19,15 +31,45 @@ services:
       - '9229:9229'
       - '9230:9230'
     volumes:
-      - ./:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./packages/worker:/usr/src/app/packages/worker
+      - /usr/src/app/packages/worker/node_modules
+      - ./node_modules:/usr/src/worker/node_modules:ro
     depends_on:
       zksync:
         condition: service_healthy
     restart: unless-stopped
 
+  api:
+    build:
+      context: .
+      dockerfile: ./packages/api/Dockerfile
+      target: development-stage
+    command: npm run --prefix packages/api dev:debug
+    environment:
+      - PORT=3000
+      - METRICS_PORT=3005
+      - LOG_LEVEL=verbose
+      - NODE_ENV=development
+      - DATABASE_URL=postgres://postgres:postgres@postgres:5432/block-explorer
+    ports:
+      - '3000:3000'
+      - '3005:3005'
+      - '9231:9229'
+      - '9232:9230'
+    volumes:
+      - ./packages/api:/usr/src/app/packages/api
+      - /usr/src/app/packages/api/node_modules
+      - ./node_modules:/usr/src/api/node_modules:ro
+    depends_on:
+      - worker
+    restart: unless-stopped
+
   postgres:
-    image: "postgres"
+    image: "postgres:14"
+    logging:
+      driver: none 
+    volumes:
+      - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     healthcheck:
@@ -48,7 +90,7 @@ services:
       - "8545:8545"
       - "8546:8546"
     volumes:
-      - ./volumes/geth:/var/lib/geth/data
+      - geth:/var/lib/geth/data
 
   zksync:
     stdin_open: true
@@ -64,9 +106,9 @@ services:
       - "3051:3051" # JSON RPC WS port
     volumes:
       # Configs folder bind
-      - ./volumes/zksync/env/dev:/etc/env/dev
+      - zksync-config:/etc/env/
       # Storage folder bind
-      - ./volumes/zksync/data:/var/lib/zksync/data
+      - zksync-data:/var/lib/zksync/data
     environment:
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/zksync_local
       - ETH_CLIENT_WEB3_URL=http://geth:8545
@@ -76,3 +118,9 @@ services:
       timeout: 5s
       retries: 120
     restart: unless-stopped
+
+volumes:
+  geth:
+  postgres:
+  zksync-config:
+  zksync-data:
