--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -8,5 +8,6 @@ PORT=3000
 LOG_LEVEL=debug
 LIMITED_PAGINATION_MAX_ITEMS=100000
 DISABLE_API_SCHEMA_DOCS=false
+DISABLE_EXTERNAL_API=false
 DATABASE_STATEMENT_TIMEOUT_MS=90000
 CONTRACT_VERIFICATION_API_URL=https://zksync2-testnet-explorer.zksync.dev
