--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,12 @@
 {
   "name": "app",
   "version": "0.0.0",
+  "title": "zkSync Era Block Explorer App",
+  "description": "zkSync Era Block Explorer App",
+  "author": "Matter Labs",
+  "private": true,
+  "license": "MIT",
+  "repository": "https://github.com/matter-labs/block-explorer",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
