--- a/.github/workflows/secrets_scanner.yaml
+++ b/.github/workflows/secrets_scanner.yaml
@@ -2,6 +2,8 @@ name: Leaked Secrets Scan
 on: [pull_request]
 jobs:
   TruffleHog:
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
