--- a/.github/workflows/nodejs-license.yaml
+++ b/.github/workflows/nodejs-license.yaml
@@ -26,6 +26,8 @@ jobs:
   generate-matrix:
     name: Lists modules
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
@@ -38,6 +40,8 @@ jobs:
   license-check:
     needs: [generate-matrix]
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     strategy:
       matrix:
         dir: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
