--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -8,6 +8,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      checks: write
     defaults:
       run:
         working-directory: ./packages/app
