--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
 
   deployBackendToStaging:
     name: Deploy Block Explorer backend to staging
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, default]
     needs: createReleaseVersion
     if: ${{ github.ref == 'refs/heads/main' && needs.createReleaseVersion.outputs.releaseVersion != '' }}
     steps:
