--- a/packages/bets/package.json
+++ b/packages/bets/package.json
@@ -7,7 +7,7 @@
     "test": "jest --verbose --testPathPattern=tokens.test.ts",
     "test:e2e": "npx playwright test",
     "dev:be": "docker-compose -f docker-compose.yaml up\n",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore --ignore-pattern repos && git add ."
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore --ignore-pattern 'repos' --ignore-pattern 'git add .'"
   },
   "author": "",
   "license": "ISC",
