--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -5,6 +5,10 @@ jobs:
   build:
     name: Build and Test App
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      checks: write
     defaults:
       run:
         working-directory: ./packages/app
@@ -65,6 +69,8 @@ jobs:
     name: Feature Env, Mainnet+
     uses: ./.github/workflows/app-e2e.yml
     secrets: inherit
+    permissions:
+      contents: read
     with:
       targetUrl: ${{ needs.build.outputs.dappUrl }}
       default_network_value_for_e2e: "/?network=mainnet"
