--- a/.github/workflows/nodejs-license.yaml
+++ b/.github/workflows/nodejs-license.yaml
@@ -5,23 +5,27 @@ on: pull_request
 env:
   ALLOWED_LICENSES: >
     MIT;
-    BSD;
+    0BSD;
+    BSD-2-Clause;
+    BSD-3-Clause;
     ISC;
     Apache-2.0;
+    Apache 2.0;
     MPL-2.0;
-    LGPL-3.0;
-    LGPL-3.0-or-later;
     CC0-1.0;
     CC-BY-3.0;
     CC-BY-4.0;
     Python-2.0;
-    PSF;
-    Public Domain;
-    WTFPL;
+    Artistic-2.0;
+    Zlib;
     Unlicense;
     UNLICENSED;
+    BlueOak-1.0.0;
+  # gitconfiglocal@1.0.0 - BSD-3-Clause
+  # glob-to-regexp@0.3.0 - BSD-2-Clause
+  # map-stream@0.1.0 - MIT
   # It has to be one line, there must be no space between packages.
-  EXCLUDE_PACKAGES: testrpc@0.0.1;uuid@2.0.1;
+  EXCLUDE_PACKAGES: gitconfiglocal@1.0.0;glob-to-regexp@0.3.0;map-stream@0.1.0
 
 jobs:
   generate-matrix:
