--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "workspaces": [
     "packages/*",
-    "integrationTests"
+    "integration-tests"
   ],
   "scripts": {
     "prepare": "husky install",
@@ -18,6 +18,7 @@
     "test:ci": "lerna run test:ci",
     "test:e2e": "lerna run test:e2e",
     "test:sdk-ui": "lerna run test:sdk-ui",
+    "test:sdk-api": "lerna run test:sdk-api",
     "dev": "lerna run dev",
     "build": "lerna run build",
     "start": "lerna run start",
