--- a/.github/workflows/app-deploy-feature-branch.yml
+++ b/.github/workflows/app-deploy-feature-branch.yml
@@ -63,3 +63,16 @@ jobs:
           expires: 7d
           projectId: staging-scan-v2
           entryPoint: ./packages/app
+
+  mainnet:
+    needs: build
+    name: Feature Env, Mainnet+
+    uses: ./.github/workflows/app-e2e.yml
+    secrets: inherit
+    permissions:
+      contents: read
+    with:
+      targetUrl: ${{ needs.build.outputs.dappUrl }}
+      default_network_value_for_e2e: "/?network=mainnet"
+      publish_to_allure: true
+      environmentTags: "and not @stagingEnv"
