--- a/.github/workflows/app-deploy-preview.yml
+++ b/.github/workflows/app-deploy-preview.yml
@@ -60,3 +60,17 @@ jobs:
         run: |
           run: |
           echo "Block explorer app has been deployed to: ${{ steps.deploy.outputs.details_url }}"
+
+  mainnet:
+    needs: deploy
+    name: Staging Env, Mainnet+
+    uses: ./.github/workflows/app-e2e.yml
+    secrets: inherit
+    permissions:
+      contents: read
+    with:
+      targetUrl: ${{ needs.deploy.outputs.dappUrl }}
+      default_network_value_for_e2e: "/?network=mainnet"
+      publish_to_allure: true
+      environmentTags: "and not @featureEnv"
+      
