--- a/.gitignore
+++ b/.gitignore
@@ -52,5 +52,8 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 
-#Allure
+# Allure
 /allure-results/
+
+# App hyperchain config
+hyperchain.config.json
