ci: Migration from ci-runner to matterlabs-ci-runner

--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -34,7 +34,7 @@ env:
 
 jobs:
   e2e:
-    runs-on: [self-hosted, ci-runner]
+    runs-on: [matterlabs-ci-runner]
     permissions:
       contents: read
     defaults:
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tags: [ 
+        tags: [
                 "@artifactsSet1",
                 "@artifactsSet2",
                 "@artifactsSet3",
@@ -53,9 +53,9 @@ jobs:
                 "@redirectionSet3",
                 "@copying",
                 "@search",
-                "@testnetSmokeSuite" 
+                "@testnetSmokeSuite"
               ]
-                
+
     name: '${{ matrix.tags }}'
     container:
       image: mcr.microsoft.com/playwright:v1.27.0-focal
@@ -113,11 +113,11 @@ jobs:
       - name: Create launch ID
         if: always()
         env:
-          ALLURE_LAUNCH_NAME: "#${{ github.run_number }} ${{ env.MATRIX_TAG_WITHOUT_QUOTES }}" 
+          ALLURE_LAUNCH_NAME: "#${{ github.run_number }} ${{ env.MATRIX_TAG_WITHOUT_QUOTES }}"
           ALLURE_LAUNCH_TAGS: "${{ env.ALLURE_BASIC_TAGS }}, ${{ env.MATRIX_TAG_WITHOUT_QUOTES }}"
         run: |
           echo "ALLURE_LAUNCH_ID=$(./allurectl launch create --launch-name '${{ env.ALLURE_LAUNCH_NAME }}' --no-header --format ID | tail -n1)" >> $GITHUB_ENV
- 
+
       - name: Upload tests to the Allure proj
         if: always() && inputs.publish_to_allure == true
         run: |
@@ -130,7 +130,7 @@ jobs:
         with:
           name: portal_e2e_${{ github.run_number }}_artifacts
           path: packages/app/tests/e2e/artifacts/*
-      
+
   publish:
     name: Publish Allure link to GIT
     runs-on: ubuntu-latest
