Moves ALLURE_TOKEN only in steps where it used.

--- a/.github/workflows/app-e2e.yml
+++ b/.github/workflows/app-e2e.yml
@@ -26,7 +26,6 @@ on:
         required: false
 
 env:
-  ALLURE_TOKEN: ${{ secrets.ALLURE_TOKEN }}
   ALLURE_SEARCH_REQUEST: '[{"id":"name","type":"string","value":"#${{ github.run_number }}"}]'
   ALLURE_BASIC_TAGS: "${{ github.head_ref }}, #${{ github.run_number }}, ${{ github.event.pull_request.title }}"
   ALLURE_PROJECT_ID: ${{ vars.ALLURE_PROJECT_ID }}
@@ -43,7 +42,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tags: [ 
+        tags: [
                 "@artifactsSet1",
                 "@artifactsSet2",
                 "@artifactsSet3",
@@ -53,9 +52,9 @@ jobs:
                 "@redirectionSet3",
                 "@copying",
                 "@search",
-                "@testnetSmokeSuite" 
+                "@testnetSmokeSuite"
               ]
-                
+
     name: '${{ matrix.tags }}'
     container:
       image: mcr.microsoft.com/playwright:v1.27.0-focal
@@ -113,13 +112,16 @@ jobs:
       - name: Create launch ID
         if: always()
         env:
-          ALLURE_LAUNCH_NAME: "#${{ github.run_number }} ${{ env.MATRIX_TAG_WITHOUT_QUOTES }}" 
+          ALLURE_LAUNCH_NAME: "#${{ github.run_number }} ${{ env.MATRIX_TAG_WITHOUT_QUOTES }}"
           ALLURE_LAUNCH_TAGS: "${{ env.ALLURE_BASIC_TAGS }}, ${{ env.MATRIX_TAG_WITHOUT_QUOTES }}"
+          ALLURE_TOKEN: ${{ secrets.ALLURE_TOKEN }}
         run: |
           echo "ALLURE_LAUNCH_ID=$(./allurectl launch create --launch-name '${{ env.ALLURE_LAUNCH_NAME }}' --no-header --format ID | tail -n1)" >> $GITHUB_ENV
- 
+
       - name: Upload tests to the Allure proj
         if: always() && inputs.publish_to_allure == true
+        env:
+          ALLURE_TOKEN: ${{ secrets.ALLURE_TOKEN }}
         run: |
           ./allurectl upload allure-results --launch-id ${{ env.ALLURE_LAUNCH_ID }}
           ./allurectl launch close ${{ env.ALLURE_LAUNCH_ID }}
@@ -130,7 +132,7 @@ jobs:
         with:
           name: portal_e2e_${{ github.run_number }}_artifacts
           path: packages/app/tests/e2e/artifacts/*
-      
+
   publish:
     name: Publish Allure link to GIT
     runs-on: ubuntu-latest
