test: final refactoring

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test": "lerna run test",
     "test:ci": "lerna run test:ci",
     "test:e2e": "lerna run test:e2e",
-    "test:ui": "lerna run test:ui",
-    "test:api": "lerna run test:api",
+    "test:integration:ui": "lerna run integration-test:ui",
+    "test:integration:api": "lerna run integration-test:api",
     "dev": "lerna run dev",
     "build": "lerna run build",
     "start": "lerna run start",
